--- a/AWA-V1/package.json
+++ b/AWA-V1/package.json
@@ -21,7 +21,8 @@
     "@angular/router": "~9.0.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "sweetalert2": "^9.15.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.7",
